--- a/WinFormBreaker/WinFormBreaker/WinFormBreaker.csproj
+++ b/WinFormBreaker/WinFormBreaker/WinFormBreaker.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\Stages\Stage1.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Stages\Stage1.Designer.cs">
+      <DependentUpon>Stage1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game\BallMoveInfo.cs" />
     <Compile Include="Controls\BallRadioButton.cs">
       <SubType>Component</SubType>
@@ -97,8 +103,17 @@
     <Compile Include="Scenes\MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Stages\DebugStage.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Stages\DebugStage.Designer.cs">
+      <DependentUpon>DebugStage.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Controls\GamePanel.resx">
       <DependentUpon>GamePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Stages\Stage1.resx">
+      <DependentUpon>Stage1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -114,6 +129,9 @@
     </Compile>
     <EmbeddedResource Include="Scenes\MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Stages\DebugStage.resx">
+      <DependentUpon>DebugStage.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
