--- a/WinFormBreaker/WinFormBreaker/WinFormBreaker.csproj
+++ b/WinFormBreaker/WinFormBreaker/WinFormBreaker.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ComboBoxBlock.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\Stages\Stage1.cs">
       <SubType>UserControl</SubType>
     </Compile>
